# meilisearch_upload_milli_benchmark_to_rebenchdb

./: Cargo.toml  README.md  benchmarks  env.json  search_songs_main_6bf9824f.json
src/: main.rs
