[package]
name = "meilisearch_upload_milli_benchmark_to_rebenchdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
rayon = "1.8.1"
rebenchdb-client = { path = "../rebenchdb-client" }
serde_json = "1.0.111"
ureq = "2.9.1"
